# project-mlops-cancer-cell-detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  READ.md  README.md  pyproject.toml
brain_tumor_segmentation/: Dockerfile  __init__.py
brain_tumor_segmentation/data/: __init__.py  dataset.py
brain_tumor_segmentation/data/transforms/: __init__.py  base.py  training.py  validation.py
brain_tumor_segmentation/models/: __init__.py  segresnet.py
brain_tumor_segmentation/training/: __init__.py  metrics.py  trainer.py
brain_tumor_segmentation/triton_models/brain_tumor_model/: config.pbtxt
brain_tumor_segmentation/utils/: __init__.py  logger.py  visualization.py
configs/: config.yaml  data.yaml  model.yaml  training.yaml
outputs/2025-05-16/17-22-56/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-16/17-26-07/.hydra/: hydra.yaml
outputs/2025-05-16/17-28-45/.hydra/: hydra.yaml
outputs/2025-05-16/17-31-05/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-16/18-29-10/.hydra/: hydra.yaml
outputs/2025-05-16/19-05-15/.hydra/: hydra.yaml
outputs/2025-05-16/19-14-44/.hydra/: hydra.yaml
outputs/2025-05-16/19-15-48/.hydra/: hydra.yaml
outputs/2025-05-16/19-16-54/.hydra/: hydra.yaml
outputs/2025-05-16/21-21-20/.hydra/: hydra.yaml
outputs/2025-05-16/21-22-43/.hydra/: hydra.yaml
outputs/2025-05-16/21-23-30/.hydra/: hydra.yaml
outputs/2025-05-16/21-23-53/.hydra/: hydra.yaml
outputs/2025-05-16/21-26-51/.hydra/: hydra.yaml
outputs/2025-05-16/21-27-31/.hydra/: hydra.yaml
outputs/2025-05-16/21-28-24/.hydra/: hydra.yaml
outputs/2025-05-16/21-42-34/.hydra/: hydra.yaml
outputs/2025-05-16/21-45-44/.hydra/: hydra.yaml
scripts/: export.py  infer.py  server.py  train.py
tmp/: lock
(+45 files in other folders)
